Fixed invisible 'Contact' Heading

--- a/mtp-portfolio/src/Components/Extra.css
+++ b/mtp-portfolio/src/Components/Extra.css
@@ -53,7 +53,7 @@
     height: 300px;
 }
 
-.caption {
+.captionExtra {
     position: absolute;
     padding: 10px;
     left: 5%;
